@@ -750,3 +750,7 @@ Mon Aug 22 23:02:03 2005                        Michael Jennings (mej)
 
 Add more quoting to libast.m4 for newer autoSPANK tools.
 ----------------------------------------------------------------------
+Thu Sep  1 02:20:29 2005                        Michael Jennings (mej)
+
+Additional quoting for libast.m4.
+----------------------------------------------------------------------
